--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/SamLubbers/D3-basics#readme",
   "dependencies": {
+    "ejs": "^2.5.7",
     "express": "^4.16.2",
     "node-sass-middleware": "^0.11.0",
     "pug": "^2.0.0-rc.4"
