--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "ejs": "^2.5.7",
     "express": "^4.16.2",
+    "express-ejs-extend": "0.0.1",
     "node-sass-middleware": "^0.11.0",
     "pug": "^2.0.0-rc.4"
   }
