--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,14 @@
-# npm modules
+.DS_Store
 node_modules/
+/dist/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 
-# compiled css
-*.css
-*.css.map
+# Editor directories and files
+.idea
+.vscode
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
